2007-12-24  David Schleef  <ds@schleef.org>

	* sys/glsink/Makefile.am:
	* sys/glsink/glimagesink.h:
	* sys/glsink/glvideo.c:
	* sys/glsink/glvideo.h:
	* sys/glsink/gstglbuffer.c:
	* sys/glsink/gstglbuffer.h:
	* sys/glsink/gstgldisplay.c:
	* sys/glsink/gstgldisplay.h:
	  Rename glvideo.[ch] to gstgldisplay.[ch].

2007-12-24  David Schleef  <ds@schleef.org>

	* sys/glsink/glimagesink.c:
	* sys/glsink/glimagesink.h:
	* sys/glsink/glvideo.c:
	* sys/glsink/glvideo.h:
	* sys/glsink/gstglbuffer.c:
	* sys/glsink/gstglbuffer.h:
	* sys/glsink/gstgldownload.c:
	* sys/glsink/gstglfilter.c:
	* sys/glsink/gstglupload.c:
	  Rewrite a bunch of code to use textures as the intermediate
	  instead of renderbuffers.  upload, download, filtering all
	  work.

2007-12-23  David Schleef  <ds@schleef.org>

	* gst/videoparse/Makefile.am:
	* gst/videoparse/README:
	* gst/videoparse/gstvideoparse.c:
	  Remove videoparse element, because it was moved to gst/rawparse/

2007-12-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/rawparse/gstrawparse.c: (gst_raw_parse_src_event):
	Always seek on frame boundaries, will produce nothing useful
	otherwise.

2007-12-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* gst/rawparse/Makefile.am:
	* gst/rawparse/README:
	* gst/rawparse/gstaudioparse.c: (gst_audio_parse_format_get_type),
	(gst_audio_parse_endianness_get_type), (gst_audio_parse_base_init),
	(gst_audio_parse_class_init), (gst_audio_parse_init),
	(gst_audio_parse_set_property), (gst_audio_parse_get_property),
	(gst_audio_parse_update_frame_size), (gst_audio_parse_get_caps):
	* gst/rawparse/gstaudioparse.h:
	* gst/rawparse/gstrawparse.c: (gst_raw_parse_base_init),
	(gst_raw_parse_class_init), (gst_raw_parse_init),
	(gst_raw_parse_dispose),
	(gst_raw_parse_class_set_src_pad_template),
	(gst_raw_parse_class_set_multiple_frames_per_buffer),
	(gst_raw_parse_reset), (gst_raw_parse_chain),
	(gst_raw_parse_convert), (gst_raw_parse_sink_event),